feat: fix test run for java 19